<resources>
    <string name="app_name">Liflow</string>
    <string name="title_daily_post">World</string>
    <string name="title_search">Search</string>
    <string name="title_new">New</string>
    <string name="title_like">Like</string>
    <string name="title_profile">Profile</string>
    <string name="title_profile_post">Profile Post</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_inspiration_sentence">Learn from each other</string>
    <string name="activity_login_email_hint">EMAIL</string>
    <string name="activity_login_password_hint">PASSWORD</string>
    <string name="activity_login_forgot_password">Forgot password ?</string>
    <string name="activity_login_log_in">Log in</string>
    <string name="activity_login_create_an_account">Create an account</string>
    <string name="fragment_profile_stats_followers">Followers</string>
    <string name="fragment_profile_stats_following">Following</string>
    <string name="fragment_profile_stats_claps">Claps</string>
    <string name="fragment_profile_posts_badges">Badges</string>
    <string name="fragment_profile_posts_posts">Posts</string>
    <string name="follow">Follow</string>
    <string name="followed">Followed</string>
    <string name="like">Like</string>
    <string name="unlike">Unlike</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
