<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_world"
        android:icon="@drawable/ic_world"
        android:title="@string/title_world" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_new"
        android:icon="@drawable/ic_add"
        android:title="@string/title_new" />

    <item
        android:id="@+id/navigation_like"
        android:icon="@drawable/ic_heart"
        android:title="@string/title_like" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_user"
        android:title="@string/title_profile" />

</menu>
