<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.liflow.presentation.ui.login.LoginViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        tools:context=".presentation.ui.login.LoginActivity"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:background="@color/colorWhite"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/activity_login_textView_appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/lato"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@color/colorGreenMint"
            android:textSize="@dimen/text_size_title"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/activity_login_textView_inspiration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/lato"
            android:text="@string/login_inspiration_sentence"
            android:textColor="@color/colorDarkGrey"
            android:textSize="@dimen/text_size_caption"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_login_textView_appName" />

        <ImageView
            android:id="@+id/activity_login_imageView_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="32dp"
            android:contentDescription="TODO"
            android:src="@drawable/ic_leaf"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_login_textView_inspiration" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_login_textInputLayout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:theme="@style/TextLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_login_imageView_logo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_login_editText_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@={viewModel.username}"
                android:hint="@string/activity_login_email_hint"
                android:fontFamily="@font/roboto"
                android:textAllCaps="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_login_textInputLayput_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:theme="@style/TextLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_login_textInputLayout_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_login_editText_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.password}"
                android:inputType="text"
                android:hint="@string/activity_login_password_hint"
                android:fontFamily="@font/roboto"
                android:textAllCaps="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/activity_login_button_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/roboto"
            android:text="@string/activity_login_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/colorDarkGrey"
            android:textSize="@dimen/text_size_caption"
            android:stateListAnimator="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_login_textInputLayput_password" />

        <Button
            android:id="@+id/activity_login_button_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/button_white_normal"
            android:text="@string/activity_login_log_in"
            android:textColor="@color/colorDarkGrey"
            android:fontFamily="@font/roboto"
            android:onClick="@{() -> viewModel.onClickLogin()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_login_button_reset" />

        <Button
            android:id="@+id/activity_login_button_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/button_mint_normal"
            android:fontFamily="@font/roboto"
            android:text="@string/activity_login_create_an_account"
            android:textColor="@color/colorWhite"
            android:onClick="@{() -> viewModel.onClickRegister()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_login_button_login" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>