<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.example.liflow.presentation.ui.profile.viewmodel.CurrentProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.profile.fragment.CurrentCurrentProfileFragment">

        <TextView
            android:id="@+id/fragment_current_profile_textView_fullname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/lato_bold"
            android:text="@{viewModel.profileDetails.fullname}"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_big"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fragment_current_profile_textView_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:text="@{viewModel.profileDetails.gender}"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_caption"
            app:layout_constraintEnd_toStartOf="@+id/fragment_current_profile_textView_age"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_current_profile_textView_fullname" />

        <TextView
            android:id="@+id/fragment_current_profile_textView_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:fontFamily="@font/lato"
            android:text="@{viewModel.profileDetails.age}"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_caption"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_current_profile_textView_gender"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/fragment_current_profile_textView_gender"
            app:layout_constraintTop_toTopOf="@+id/fragment_current_profile_textView_gender" />

        <ImageButton
            android:id="@+id/fragment_current_profile_imageButton_settings"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:background="@null"
            android:src="@drawable/ic_settings"
            android:onClick="@{() -> viewModel.onClickLogout()}"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_current_profile_textView_age"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/fragment_current_profile_imageView_picture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_current_profile_textView_age" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragment_current_profile_layout_stats"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@color/colorGreenMint"
            app:layout_constraintBottom_toTopOf="@+id/fragment_current_profile_textView_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_current_profile_imageView_picture">

            <TextView
                android:id="@+id/fragment_current_profile_textView_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/lato"
                android:text="@string/fragment_profile_stats_following"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_big"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/fragment_current_profile_textView_followers_nb"
                app:layout_constraintEnd_toStartOf="@+id/fragment_current_profile_textView_following"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/fragment_current_profile_textView_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:text="@string/fragment_profile_stats_following"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_big"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/fragment_current_profile_textView_followers"
                app:layout_constraintEnd_toStartOf="@+id/fragment_current_profile_textView_claps"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/fragment_current_profile_textView_followers"
                app:layout_constraintTop_toTopOf="@+id/fragment_current_profile_textView_followers" />

            <TextView
                android:id="@+id/fragment_current_profile_textView_claps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:text="@string/fragment_profile_stats_claps"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_big"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/fragment_current_profile_textView_following"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/fragment_current_profile_textView_following"
                app:layout_constraintTop_toTopOf="@+id/fragment_current_profile_textView_following" />

            <TextView
                android:id="@+id/fragment_current_profile_textView_followers_nb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/lato"
                android:text="@{viewModel.profileDetails.totalFollower}"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/fragment_current_profile_textView_followers"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/fragment_current_profile_textView_followers"
                app:layout_constraintTop_toBottomOf="@+id/fragment_current_profile_textView_followers" />

            <TextView
                android:id="@+id/fragment_current_profile_textView_following_nb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:text="@{viewModel.profileDetails.totalFollowing}"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/fragment_current_profile_textView_following"
                app:layout_constraintStart_toStartOf="@+id/fragment_current_profile_textView_following"
                app:layout_constraintTop_toBottomOf="@+id/fragment_current_profile_textView_following" />

            <TextView
                android:id="@+id/fragment_current_profile_textView_claps_nb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:text="@{viewModel.profileDetails.totalClap}"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/fragment_current_profile_textView_claps"
                app:layout_constraintStart_toStartOf="@+id/fragment_current_profile_textView_claps"
                app:layout_constraintTop_toBottomOf="@+id/fragment_current_profile_textView_claps" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/fragment_current_profile_textView_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:fontFamily="@font/lato"
            android:text="@{viewModel.profileDetails.description}"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_current_profile_layout_stats" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragment_current_profile_layout_badges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:onClick="@{() -> viewModel.onClickSwitchToBadgesFragment()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_current_profile_textView_description">

            <TextView
                android:id="@+id/fragment_current_profile_textView_liked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/lato_bold"
                android:text="@string/fragment_profile_posts_badges"
                android:textAllCaps="true"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size_big"
                app:layout_constraintBottom_toTopOf="@+id/fragment_current_profile_textView_badges_nb"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/fragment_current_profile_textView_badges_nb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/lato_bold"
                android:text="@{viewModel.profileDetails.totalBadges}"
                android:textColor="@color/colorGreenMint"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/fragment_current_profile_textView_liked"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/fragment_current_profile_textView_liked"
                app:layout_constraintTop_toBottomOf="@+id/fragment_current_profile_textView_liked" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/fragment_current_profile_view_separator"
            android:layout_width="64dp"
            android:layout_height="0.5dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorDarkGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_current_profile_layout_badges" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragment_current_profile_layout_writtenPosts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="@{() -> viewModel.onClickSwitchToWrittenPostsFragment()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_current_profile_view_separator">

            <TextView
                android:id="@+id/fragment_current_profile_textView_written"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/lato_bold"
                android:text="@string/fragment_profile_posts_posts"
                android:textAllCaps="true"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size_big"
                app:layout_constraintBottom_toTopOf="@+id/fragment_current_profile_textView_written_nb"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/fragment_current_profile_textView_written_nb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/lato_bold"
                android:text="@{viewModel.profileDetails.totalPostWritten}"
                android:textColor="@color/colorGreenMint"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/fragment_current_profile_textView_written"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/fragment_current_profile_textView_written"
                app:layout_constraintTop_toBottomOf="@+id/fragment_current_profile_textView_written" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>